plugin-based placeholders work collapse all madlib accordions by default if no html5 placeholder support, so that the plugin ones are forced to reset fix #17

--- a/style.css
+++ b/style.css
@@ -196,6 +196,10 @@ p.bridal
 {
 	position: relative;
 }
+.madlibcontents
+{
+	position:relative;
+}
 .madlibtext
 {
 	/* text white to start so you can't see it */
